--- a/.env
+++ b/.env
@@ -1,4 +1,7 @@
 NODE_ENV=development
 PORT=5000
-MONGO_URI=mongodb://localhost:27017/store_backend
+#MONGO_URI=mongodb://localhost:27017/store_backend
 JWT_SECRET=your_jwt_secret
+
+
+MONGO_URI=mongodb+srv://root:root@cluster0.l0tqz.mongodb.net/my_store
