Setupn for postgres database and add the cloudinary setup

--- a/.env
+++ b/.env
@@ -1,7 +1,13 @@
 NODE_ENV=development
 PORT=5000
-MONGO_URI=mongodb://localhost:27017/store_backend
-JWT_SECRET=your_jwt_secret
+DB_HOST=localhost
+DB_NAME=store_backend
+DB_USER=postgres
+DB_PASSWORD=postgres
+#JWT_SECRET=your_jwt_secret
 
 
-#MONGO_URI=mongodb+srv://root:root@cluster0.l0tqz.mongodb.net/my_store
+
+CLOUDINARY_CLOUD_NAME=de9vdkgwz
+CLOUDINARY_API_KEY=423683486978332
+CLOUDINARY_API_SECRET=u4YN2phN4wGIbyDr_wZfBqDr6H0
